--- a/client/src/helpdesk/helpdesk-detail.component.html
+++ b/client/src/helpdesk/helpdesk-detail.component.html
@@ -92,7 +92,7 @@
                         <td ng-bind="'Field_Profile' | translate"></td>
                         <td ng-bind="$ctrl.person.passwordPolicyID"></td>
                     </tr>
-                    <tr>
+                    <tr class="bottom-border">
                         <td ng-bind="'Field_Display' | translate"></td>
                         <td>
                             <ul>
@@ -100,7 +100,6 @@
                             </ul>
                         </td>
                     </tr>
-                    <hr>
                     <tr ng-repeat="(key, item) in $ctrl.person.passwordPolicyRules">
                         <td ng-bind="key"></td>
                         <td ng-bind="item"></td>
@@ -136,16 +135,20 @@
         <mf-button ng-click="$ctrl.unlockUser()"
                    ng-disabled="$ctrl.buttonDisabled('unlock')"
                    ng-if="$ctrl.buttonVisible('unlock')">{{ 'Button_Unlock' | translate }}</mf-button>
-        <mf-button ng-disabled="$ctrl.buttonDisabled('clearResponses')"
+        <mf-button ng-click="$ctrl.clearResponses()"
+                   ng-disabled="$ctrl.buttonDisabled('clearResponses')"
                    ng-if="$ctrl.buttonVisible('clearResponses')">{{ 'Button_ClearResponses' | translate }}</mf-button>
-        <mf-button ng-disabled="$ctrl.buttonDisabled('clearOtpSecret')"
+        <mf-button ng-click="$ctrl.clearOtpSecret()"
+                   ng-disabled="$ctrl.buttonDisabled('clearOtpSecret')"
                    ng-if="$ctrl.buttonVisible('clearOtpSecret')">{{ 'Button_HelpdeskClearOtpSecret' | translate }}</mf-button>
         <mf-button ng-click="$ctrl.verifyUser()"
                    ng-disabled="$ctrl.buttonDisabled('verification')"
                    ng-if="$ctrl.buttonVisible('verification')">{{ 'Button_Verify' | translate }}</mf-button>
-        <mf-button ng-disabled="$ctrl.buttonDisabled('deleteUser')"
+        <mf-button ng-click="$ctrl.deleteUser()"
+                   ng-disabled="$ctrl.buttonDisabled('deleteUser')"
                    ng-if="$ctrl.buttonVisible('deleteUser')">{{ 'Button_Delete' | translate }}</mf-button>
-        <mf-button ng-repeat="button in $ctrl.person.customButtons"
+        <mf-button ng-click="$ctrl.clickCustomButton(button)"
+                   ng-repeat="button in $ctrl.person.customButtons"
                    ng-attr-title="{{button.description}}">{{ button.label }}</mf-button>
     </div>
 </div>
