--- a/client/src/pages/changepassword/password-suggestions.scss
+++ b/client/src/pages/changepassword/password-suggestions.scss
@@ -1,3 +1,3 @@
-#dialogPopup .dialogBody, #html5Dialog .dialogBody {
-    height: 395px;
+.randomPasswordDialog {
+    height: 395px; width: 350px; max-width: 350px; margin-top: auto; margin-bottom: auto;
 }
