--- a/client/src/changepassword/type-change-password.component.scss
+++ b/client/src/changepassword/type-change-password.component.scss
@@ -21,15 +21,31 @@
  */
 
 ias-dialog {
-  &.autogen-change-password-dialog {
-    table {
-      td {
-        min-width: 160px;
-        height: 15px;
+  &.type-change-password-dialog {
+    .ias-dialog-body {
+      table {
+        input, mf-icon-button {
+          vertical-align: middle
+        }
 
-        div {
-          cursor: pointer;
-          font-family: monospace;
+        input {
+          margin: 7px;
+        }
+
+        mf-icon-button {
+          display: inline-block;
+
+          mf-icon {
+            font-size: 20px;
+          }
+        }
+
+        td {
+          min-width: 250px;
+        }
+
+        .strength-label {
+          font-weight: bold;
         }
       }
     }
