--- a/client/src/changepassword/autogen-change-password.component.html
+++ b/client/src/changepassword/autogen-change-password.component.html
@@ -20,7 +20,7 @@
   ~ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
   -->
 
-<ias-dialog class="change-password-dialog">
+<ias-dialog class="autogen-change-password-dialog">
     <div class="ias-dialog-header">
         <div class="ias-title" ng-bind="'Title_RandomPasswords' | translate"></div>
     </div>
