--- a/client/src/changepassword/type-change-password.component.html
+++ b/client/src/changepassword/type-change-password.component.html
@@ -20,29 +20,54 @@
   ~ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
   -->
 
-<ias-dialog class="change-password-dialog">
+<ias-dialog class="type-change-password-dialog">
     <div class="ias-dialog-header">
         <div class="ias-title" ng-bind="('Title_ChangePassword' | translate) + ' - ' + $ctrl.personUsername"></div>
     </div>
     <div class="ias-dialog-body">
         <p ng-bind="$ctrl.message"></p>
 
-
-        <input ng-model="$ctrl.password1" ng-hide="$ctrl.password1Masked" type="text">
-        <input ng-model="$ctrl.password1" ng-show="$ctrl.password1Masked" type="password">
-        <mf-button ng-click="$ctrl.togglePassword1Masked()" ng-if="$ctrl.maskPasswords">
-            {{ 'Button_Show' | translate }}
-        </mf-button>
-        <span>Strength: Very Strong</span>
-
-        <input ng-model="$ctrl.password2" ng-hide="$ctrl.password2Masked" type="text">
-        <input ng-model="$ctrl.password2" ng-show="$ctrl.password2Masked" type="password">
-        <mf-button ng-click="$ctrl.togglePassword2Masked()" ng-if="$ctrl.maskPasswords">
-            {{ 'Button_Show' | translate }}
-        </mf-button>
-        <!--Password list
-        First pw   strength
-        Second pw  checkmark-->
+        <table>
+        <tbody>
+            <tr>
+                <td>
+                    <input ng-model="$ctrl.password1" ng-hide="$ctrl.password1Masked" type="text">
+                    <input ng-model="$ctrl.password1" ng-show="$ctrl.password1Masked" type="password">
+                    <mf-icon-button
+                        icon="password_thin"
+                        id="password-icon1"
+                        ng-attr-title="{{ 'Button_Show' | translate }}"
+                        ng-click="$ctrl.togglePassword1Masked()"
+                        ng-if="$ctrl.maskPasswords"
+                        ng-show="!!$ctrl.password1"></mf-icon-button>
+                </td>
+                <td>
+                    <div ng-if="$ctrl.showStrengthMeter" ng-show="!!$ctrl.password1">
+                        <div>Strength: <span class="strength-label" ng-bind="$ctrl.strength"></span>
+                        </div>
+                        <div style="height:10px; width:80px; background-color:red; border:1px solid black;"></div>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input ng-model="$ctrl.password2" ng-hide="$ctrl.password2Masked" type="text">
+                    <input ng-model="$ctrl.password2" ng-show="$ctrl.password2Masked" type="password">
+                    <mf-icon-button
+                        icon="password_thin"
+                        id="password-icon2"
+                        ng-attr-title="{{ 'Button_Show' | translate }}"
+                        ng-click="$ctrl.togglePassword2Masked()"
+                        ng-if="$ctrl.maskPasswords"
+                        ng-show="!!$ctrl.password2"></mf-icon-button>
+                </td>
+                <td>
+                    <span>check</span>
+                    <span>X</span>
+                </td>
+            </tr>
+        </tbody>
+        </table>
     </div>
     <div class="ias-actions">
         <mf-button ng-click="$ctrl.chooseTypedPassword()">{{ 'Button_ChangePassword' | translate }}</mf-button>
