--- a/server/src/main/webapp/public/resources/themes/autumn/style.css
+++ b/server/src/main/webapp/public/resources/themes/autumn/style.css
@@ -173,3 +173,9 @@ table td.key {
     text-align: right;
 }
 
+.tab-container > .label:hover {
+    color: #ffcccc;
+    border-top-color: #ffcccc;
+    border-left-color: #ffcccc;
+    border-right-color: #ffcccc;
+}
