More work on change password controller

--- a/client/src/changepassword/type-change-password.component.html
+++ b/client/src/changepassword/type-change-password.component.html
@@ -70,7 +70,8 @@
         </table>
     </div>
     <div class="ias-actions">
-        <mf-button ng-click="$ctrl.chooseTypedPassword()">{{ 'Button_ChangePassword' | translate }}</mf-button>
+        <mf-button ng-click="$ctrl.chooseTypedPassword()"
+                   ng-disabled="!$ctrl.passwordAcceptable">{{ 'Button_ChangePassword' | translate }}</mf-button>
         <mf-button ng-click="$ctrl.status = 'autogen'"
                    ng-if="$ctrl.passwordUiMode === 'BOTH'">{{ 'Title_RandomPasswords' | translate }}
         </mf-button>
