HelpDesk search errors and messages added to table and card search views

--- a/client/src/helpdesk/helpdesk-search-cards.component.html
+++ b/client/src/helpdesk/helpdesk-search-cards.component.html
@@ -40,10 +40,19 @@
     </ias-button>
 </div>
 
-<div class="people-search-component-content">
-    <ias-button class="verifications-button ias-cta" ng-if="$ctrl.verificationsEnabled"
-                ng-click="$ctrl.showVerifications()">{{ 'Button_Verifications' | translate }}</ias-button>
+<div class="search-info-container">
+    <div>
+        <ias-button class="verifications-button ias-cta" ng-if="$ctrl.verificationsEnabled"
+                    ng-click="$ctrl.showVerifications()">{{ 'Button_Verifications' | translate }}</ias-button>
+    </div>
 
+    <div class="search-info" ng-class="{'loading': !$ctrl.getMessage()}"
+         ng-if="$ctrl.loading || $ctrl.searchMessage || $ctrl.errorMessage"
+         ng-bind="$ctrl.getMessage() || ('Display_PleaseWait' | translate)">
+    </div>
+</div>
+
+<div class="people-search-component-content">
     <div class="ias-grid">
         <person-card person="person"
                      show-image="$ctrl.photosEnabled"
