Continue implementing change password dialog on HelpDesk detail page

--- a/client/src/changepassword/type-change-password.component.html
+++ b/client/src/changepassword/type-change-password.component.html
@@ -31,8 +31,8 @@
         <tbody>
             <tr>
                 <td>
-                    <input ng-model="$ctrl.password1" ng-hide="$ctrl.password1Masked" type="text">
-                    <input ng-model="$ctrl.password1" ng-show="$ctrl.password1Masked" type="password">
+                    <input ng-model="$ctrl.password1" ng-hide="$ctrl.passwordMasked" type="text">
+                    <input ng-model="$ctrl.password1" ng-show="$ctrl.passwordMasked" type="password">
                     <mf-icon-button
                         icon="password_thin"
                         id="password-icon1"
@@ -42,17 +42,14 @@
                         ng-show="!!$ctrl.password1"></mf-icon-button>
                 </td>
                 <td>
-                    <div ng-if="$ctrl.showStrengthMeter" ng-show="!!$ctrl.password1">
-                        <div>Strength: <span class="strength-label" ng-bind="$ctrl.strength"></span>
-                        </div>
-                        <div style="height:10px; width:80px; background-color:red; border:1px solid black;"></div>
+                    <div ng-bind="$ctrl.strength" ng-if="$ctrl.showStrengthMeter" ng-show="!!$ctrl.password1">
                     </div>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <input ng-model="$ctrl.password2" ng-hide="$ctrl.password2Masked" type="text">
-                    <input ng-model="$ctrl.password2" ng-show="$ctrl.password2Masked" type="password">
+                    <input ng-model="$ctrl.password2" ng-hide="$ctrl.passwordMasked" type="text">
+                    <input ng-model="$ctrl.password2" ng-show="$ctrl.passwordMasked" type="password">
                     <mf-icon-button
                         icon="password_thin"
                         id="password-icon2"
@@ -62,8 +59,8 @@
                         ng-show="!!$ctrl.password2"></mf-icon-button>
                 </td>
                 <td>
-                    <span>check</span>
-                    <span>X</span>
+                    <span ng-show="$ctrl.matchStatus==='MATCH'">check</span>
+                    <span ng-show="$ctrl.matchStatus==='NO_MATCH'">X</span>
                 </td>
             </tr>
         </tbody>
@@ -72,7 +69,7 @@
     <div class="ias-actions">
         <mf-button ng-click="$ctrl.chooseTypedPassword()"
                    ng-disabled="!$ctrl.passwordAcceptable">{{ 'Button_ChangePassword' | translate }}</mf-button>
-        <mf-button ng-click="$ctrl.status = 'autogen'"
+        <mf-button ng-click="$ctrl.onClickRandomPasswords()"
                    ng-if="$ctrl.passwordUiMode === 'BOTH'">{{ 'Title_RandomPasswords' | translate }}
         </mf-button>
     </div>
