Updated the style for the Help Desk page, so it footer doesn't creep up on top of the page data.

--- a/server/src/main/webapp/public/resources/style.css
+++ b/server/src/main/webapp/public/resources/style.css
@@ -1633,3 +1633,7 @@ html[dir="rtl"] .message.message-error .errorDetail {
 table.ias-table, table.ias-table td {
     border: none;
 }
+
+.helpdesk-wrapper #centerbody {
+    overflow: auto;
+}
