More changes to Change Password dialog on HelpDesk detail page

--- a/client/src/changepassword/type-change-password.component.scss
+++ b/client/src/changepassword/type-change-password.component.scss
@@ -20,24 +20,45 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
-ias-dialog {
+.ias-dialog {
   &.type-change-password-dialog {
     .ias-dialog-content {
       table {
         input {
-          vertical-align: middle
-        }
-
-        input {
           margin: 7px;
+          vertical-align: middle;
         }
 
         td {
           min-width: 250px;
         }
 
-        .strength-label {
-          font-weight: bold;
+        .ias-icon-message_error_thick {
+          color: #e50000;
+        }
+
+        .ias-icon-status_ok_thin {
+          color: #37c26a;
+        }
+
+        .ias-icon-strength1 {
+          color: #e50000;
+        }
+
+        .ias-icon-strength2 {
+          color: #f17e12;
+        }
+
+        .ias-icon-strength3 {
+          color: #ffd92d;
+        }
+
+        .ias-icon-strength4 {
+          color: #01a9e7;
+        }
+
+        .ias-icon-strength5 {
+          color: #37c26a;
         }
       }
     }
