--- a/client/src/changepassword/type-change-password.component.html
+++ b/client/src/changepassword/type-change-password.component.html
@@ -28,23 +28,20 @@
         <div class="ias-dialog-content">
             <p ng-bind="$ctrl.message"></p>
 
-            <table>
+            <table ng-model-options="{ debounce: $ctrl.inputDebounce }">
                 <tbody>
                 <tr>
                     <td>
                         <input ng-model="$ctrl.password1" ng-hide="$ctrl.passwordMasked" type="text">
                         <input ng-model="$ctrl.password1" ng-show="$ctrl.passwordMasked" type="password">
-                        <ias-button class="ias-icon-button"
-                                    id="password-icon1"
-                                    ng-attr-title="{{ 'Button_Show' | translate }}"
-                                    ng-click="$ctrl.togglePassword1Masked()"
-                                    ng-if="$ctrl.maskPasswords"
-                                    ng-show="!!$ctrl.password1">
-                            <ias-icon icon="password_thin"></ias-icon>
-                        </ias-button>
                     </td>
                     <td>
-                        <div ng-bind="$ctrl.strength" ng-if="$ctrl.showStrengthMeter" ng-show="!!$ctrl.password1">
+                        <div ng-if="$ctrl.showStrengthMeter">
+                            <ias-icon icon="strength1" ng-show="$ctrl.strength===1"></ias-icon>
+                            <ias-icon icon="strength2" ng-show="$ctrl.strength===2"></ias-icon>
+                            <ias-icon icon="strength3" ng-show="$ctrl.strength===3"></ias-icon>
+                            <ias-icon icon="strength4" ng-show="$ctrl.strength===4"></ias-icon>
+                            <ias-icon icon="strength5" ng-show="$ctrl.strength===5"></ias-icon>
                         </div>
                     </td>
                 </tr>
@@ -52,18 +49,17 @@
                     <td>
                         <input ng-model="$ctrl.password2" ng-hide="$ctrl.passwordMasked" type="text">
                         <input ng-model="$ctrl.password2" ng-show="$ctrl.passwordMasked" type="password">
-                        <ias-button class="ias-icon-button"
-                                    id="password-icon2"
-                                    ng-attr-title="{{ 'Button_Show' | translate }}"
-                                    ng-click="$ctrl.togglePassword2Masked()"
-                                    ng-if="$ctrl.maskPasswords"
-                                    ng-show="!!$ctrl.password2">
-                            <ias-icon icon="password_thin"></ias-icon>
-                        </ias-button>
+                        <div id="password-icon"
+                             ng-attr-title="{{ 'Button_Show' | translate }}"
+                             ng-if="$ctrl.maskPasswords">
+                                <a ng-bind="'Button_Show' | translate"
+                                   ng-click="$ctrl.togglePasswordMasked()"
+                                   tabindex="0"></a>
+                        </div>
                     </td>
                     <td>
-                        <span ng-show="$ctrl.matchStatus==='MATCH'">check</span>
-                        <span ng-show="$ctrl.matchStatus==='NO_MATCH'">X</span>
+                        <ias-icon icon="status_ok_thin" ng-show="$ctrl.matchStatus==='MATCH'"></ias-icon>
+                        <ias-icon icon="message_error_thick" ng-show="$ctrl.matchStatus==='NO_MATCH'"></ias-icon>
                     </td>
                 </tr>
                 </tbody>
