--- a/client/src/changepassword/type-change-password.component.html
+++ b/client/src/changepassword/type-change-password.component.html
@@ -70,7 +70,7 @@
                         ng-disabled="!$ctrl.passwordAcceptable">{{ 'Button_ChangePassword' | translate }}
             </ias-button>
             <ias-button ng-click="$ctrl.onClickRandomPasswords()"
-                        ng-if="$ctrl.passwordUiMode === 'BOTH'">{{ 'Title_RandomPasswords' | translate }}
+                        ng-if="$ctrl.passwordUiMode === 'both'">{{ 'Title_RandomPasswords' | translate }}
             </ias-button>
         </div>
 
